--- a/etc/.gitignore
+++ b/etc/.gitignore
@@ -1,3 +1,3 @@
-client_secret
-client_secret.json
-slack_url
+# This should never exist in git, since git is used to install a package that's
+# installed elsewhere. However, best be safe!
+wa-credentials
